[gd_scene load_steps=8 format=2]

[ext_resource path="res://text_font/pixelmix_micro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://title_page/new_theme_for_gui.tres" type="Theme" id=2]
[ext_resource path="res://PauseMenu/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://text_font/TheBlowar-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=3]
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 368.0
margin_top = 106.0
margin_right = 598.0
margin_bottom = 358.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 26.0
margin_top = 32.0
margin_right = 204.0
margin_bottom = 219.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 178.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Game is paused"
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 178.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 10 )

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 178.0
margin_bottom = 67.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Resume game"

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 178.0
margin_bottom = 81.0
rect_min_size = Vector2( 0, 10 )

[node name="Clear High Score" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 178.0
margin_bottom = 107.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Clear High Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 178.0
margin_bottom = 121.0
rect_min_size = Vector2( 0, 10 )

[node name="Return_to_title_page" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 178.0
margin_bottom = 147.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Back to title screen"

[node name="Control4" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 178.0
margin_bottom = 161.0
rect_min_size = Vector2( 0, 10 )

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 178.0
margin_bottom = 187.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Exit the game"

[connection signal="button_down" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Clear High Score" to="." method="_on_Return_to_title_page_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Return_to_title_page" to="." method="_on_Return_to_title_page_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Return_to_title_page_button_down"]
